# django-gallery

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
gallery/: mypy.ini  pytest.ini  run_tests_and_linters.sh
gallery/gallery/: celery.py  settings.py  urls.py
gallery/images/: models.py  serializers.py  tasks.py  views.py
gallery/images/management/commands/: ensure_admin.py
gallery/images/migrations/: 0001_initial.py  0002_rename_image_galleryimage.py
gallery/images/tests/: test_api.py
